fix(inputs): update

--- a/.github/workflows/Provision-AKS-env.yml
+++ b/.github/workflows/Provision-AKS-env.yml
@@ -15,6 +15,10 @@ on:
         description: 'Required Memory Quota for the AKS Namespace'
         required: true
         type: number
+      port_context:
+        description: 'Port context as JSON string'
+        required: true
+        type: string
 
 jobs:
   create-repository:
