--- a/.github/workflows/Provision-AKS-env.yml
+++ b/.github/workflows/Provision-AKS-env.yml
@@ -21,7 +21,7 @@ on:
         type: string
 
 jobs:
-  create-repository:
+  create-yaml-namespace:
     runs-on: ubuntu-latest
     steps:
       - name: creating YAML namespace configuration
@@ -60,8 +60,8 @@ jobs:
           properties: |
             {
               "repository": "${{ inputs.aks_environnment }}",
-              "cpu_request": "${{ inputs.cpu_quota }}"
+              "cpu_request": "${{ inputs.cpu_quota }}",
               "memory_requests": "${{ inputs.memoryQuotaGiB }}",
               "cluster_name": "DEV",
-              "created_at": "${{ github.event.workflow_run.created_at }}",
+              "created_at": "${{ github.event.workflow_run.created_at }}"
             }
