--- a/.github/workflows/Provision-AKS-env.yml
+++ b/.github/workflows/Provision-AKS-env.yml
@@ -34,19 +34,6 @@ jobs:
           cat namespace.yaml >> "$GITHUB_OUTPUT"
           echo "EOF" >> "$GITHUB_OUTPUT"
       
-      # - name: Create Repository
-      #   id: create_repo
-      #   env:
-      #     GH_TOKEN: ${{ github.token }}
-      #   run: |
-      #     echo "Creating repository: ${{ inputs.aks_environnment }}"
-
-      #     gh repo create "${{ github.repository_owner }}/${{ inputs.aks_environnment }}" \
-      #       --private \
-      #       --description "${{ inputs.description }}" \
-      #       --add-readme
-
-      #     echo "repo_url=https://github.com/${{ github.repository_owner }}/${{ inputs.aks_environnment }}" >> "$GITHUB_OUTPUT"
 
       - name: Report to Port
         uses: port-labs/port-github-action@v1
@@ -62,7 +49,7 @@ jobs:
             {
               "repository": "${{ inputs.aks_environnment }}",
               "cpu_request": "${{ inputs.cpu_quota }}", 
-              "memory_requests": "${{ inputs.memoryQuotaGiB }}",
+              "memory_requests": "${{ inputs.memory_quota_gi_b }}",
               "cluster_name": "DEV",
               "created_at": "2025-07-21T21:11:11.298Z"
             }
