--- a/.github/workflows/create-scaffold-project.yml
+++ b/.github/workflows/create-scaffold-project.yml
@@ -18,7 +18,7 @@ on:
           - python
 
 jobs:
-  create-yaml-namespace:
+  create-template-repository:
     runs-on: ubuntu-latest
     steps:
       - name: Create Repository from Template
@@ -32,7 +32,6 @@ jobs:
             --private \
             --template "$TEMPLATE_REPO" \
             --description "Scaffolded from $TEMPLATE_REPO" \
-            --confirm
           echo "repo_url=https://github.com/$NEW_REPO" >> "$GITHUB_OUTPUT"
       
 
