--- a/.github/workflows/create-scaffold-project.yml
+++ b/.github/workflows/create-scaffold-project.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       repository_name:
-        description: 'Name of the AKS Environment'
+        description: 'Repository name for the scaffolded project'
         required: true
         type: string
       language:
