--- a/.github/workflows/create-scaffold-project.yml
+++ b/.github/workflows/create-scaffold-project.yml
@@ -4,7 +4,7 @@ permissions:
   contents: write
   actions: write
   repositories: write # 'write' also includes 'read'
-  
+
 on:
   workflow_dispatch:
     inputs:
@@ -29,7 +29,7 @@ jobs:
       - name: Create Repository from Template
         id: create_repo
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GH_REPO_TOKEN}}
         run: |
           gh repo create "${{ github.repository_owner }}/${{ inputs.repository_name }}" \
             --private \
