--- a/.github/workflows/create-scaffold-project.yml
+++ b/.github/workflows/create-scaffold-project.yml
@@ -1,8 +1,8 @@
 name: Create Scaffold Project
 
-permissions:
-  contents: write
-  actions: write
+# permissions:
+#   contents: write
+#   actions: write
 
 
 on:
