--- a/.github/workflows/create-self-service-aks-application.yml
+++ b/.github/workflows/create-self-service-aks-application.yml
@@ -84,6 +84,6 @@ jobs:
               "environment": "${{ fromJSON(inputs.application_properties).env }}",
               "repository": "${{ fromJSON(inputs.repository_properties).repository_name }}",
               "domain": "${{ fromJSON(inputs.port_context).domain_identifier }} ",
-              aks_namespace: "${{ fromJSON(inputs.aks_namespace_properties).namespace_name }}",
+              "aks_namespace": "${{ fromJSON(inputs.aks_namespace_properties).namespace_name }}",
               "application_tier": "${{ fromJSON(inputs.application_properties).application_tier }}"
             }
