--- a/.github/workflows/create-self-service-aks-application.yml
+++ b/.github/workflows/create-self-service-aks-application.yml
@@ -75,7 +75,7 @@ jobs:
           properties: |
             {
 
-              "URL": "${{ needs.create-scaffold-project.outputs.repo_url }}",
+              "url": "${{ needs.create-scaffold-project.outputs.repo_url }}",
               "lifecycle": "${{ fromJSON(inputs.application_properties).lifecycle }}",
               "language": "${{ fromJSON(inputs.application_properties).language }}"
             }
