--- a/.github/workflows/create-self-service-aks-application.yml
+++ b/.github/workflows/create-self-service-aks-application.yml
@@ -31,11 +31,11 @@ jobs:
       scaffold_required: ${{ fromJSON(inputs.repository_properties).scaffold_required }}
     secrets: inherit
 
-  report-port-aks-namespace-entity:
+  report-port-services:
     runs-on: ubuntu-latest
     needs: create-scaffold-project
     steps:
-      - name: Report to Port
+      - name: Report to Port AKS Namespace
         uses: port-labs/port-github-action@v1
         with:
           clientId: ${{ secrets.PORT_CLIENT_ID }}
@@ -56,12 +56,8 @@ jobs:
             {
               "environment":  "${{ fromJSON(inputs.application_properties).env }}"
             }
-    ## Report Port.IO stage service created #
-  report-port-service:
-    runs-on: ubuntu-latest
-    needs: report-port-aks-namespace-entity
-    steps:
-      - name: Report to Port
+
+      - name: Report to Port Application project
         uses: port-labs/port-github-action@v1
         with:
           clientId: ${{ secrets.PORT_CLIENT_ID }}
