--- a/.github/workflows/fake-ci-cd-pipeline.yml
+++ b/.github/workflows/fake-ci-cd-pipeline.yml
@@ -36,7 +36,7 @@ jobs:
     if: always()
     with:
       type: "CI/CD"
-      name: "Fake CI/CD Pipeline"
+      name: "Application_pipeline"
       status: ${{ needs.build-and-test.result == 'success' && 'Active' || 'Failed' }}
       link: "https://github.com/${{ github.repository_owner }}/${{ inputs.repository_name }}"
     secrets: inherit
