--- a/.github/workflows/fake-ci-cd-pipeline.yml
+++ b/.github/workflows/fake-ci-cd-pipeline.yml
@@ -35,7 +35,7 @@ jobs:
     needs: build-and-test
     if: always()
     with:
-      type: "CI/CD"
+      type: "CI"
       name: "Application_pipeline"
       status: ${{ needs.build-and-test.result == 'success' && 'Active' || 'Failed' }}
       link: "https://github.com/${{ github.repository_owner }}/${{ inputs.repository_name }}"
