--- a/.github/workflows/fake-aks-deployment.yml
+++ b/.github/workflows/fake-aks-deployment.yml
@@ -2,6 +2,8 @@ name: Fake AKS Pipeline
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0,15,30,45 * * * *'
 
 jobs:
   build-and-test:
@@ -35,7 +37,7 @@ jobs:
     needs: build-and-test
     if: always()
     with:
-      type: "CD"
+      type: "AKS"
       name: "AKS_Application_pipeline"
       status: ${{ needs.build-and-test.result == 'success' && 'Active' || 'Failed' }}
       link: "https://github.com/${{ github.repository_owner }}/${{ inputs.repository_name }}"
